Agrego otro filtro de busqueda

--- a/src/test/resources/templates/pois.hbs
+++ b/src/test/resources/templates/pois.hbs
@@ -28,7 +28,8 @@
  			   <!--<td> <button class="botonBuscar"> Ver&nbspMas </button> </td> -->
 			   		   
 			  <form action="/poi" method="GET" id="detalle_poi">
-				   			<input type="hidden" name=id value=3 >									
+ 			   	  <!--input type="hidden" name=id value={{id}}-->
+				  <input type="hidden" name=id value=3 >									
 			  </form>
 			  <td><input form = "detalle_poi" class="botonBuscar" type="submit" value="VER MAS"></td>
  		  </tr>
