--- a/src/test/resources/templates/perfil-terminal.hbs
+++ b/src/test/resources/templates/perfil-terminal.hbs
@@ -21,6 +21,7 @@
 	<form action="/pois" method="GET" id="consulta">
 	    <div>
 	   <input class="passwd" type="text" name="nombre" placeholder="nombre" size="25" max="10">
+	   <input class="passwd" type="text" name="calle" placeholder="calle" size="25" max="10">
    	 </div>   
 	</form>
 	
