mini cambios, delego selector de tipo en hbs

--- a/src/test/resources/templates/perfil-terminal.hbs
+++ b/src/test/resources/templates/perfil-terminal.hbs
@@ -25,16 +25,7 @@
    	 </div>   
 	</form>
 	
-	 <div>
-	  <h4>Tipo: <select name = "tipo" form = "consulta" >
-	  		  <option value="Todos">Todos</option>
-  	  		  <option value="Negocio">Negocio</option>
-  	 		  <option value="EstacionDeColectivo">Estacion de Colectivo</option>
-  	 		  <option value="Banco">Banco</option>
-  			  <option value="Cgp">CGP</option>
-  	 		  </select>
-	  </h4>
-	 </div>
+		{{>selectorTipo.hbs}}
    
      <div>
        <input form = "consulta" class="botonBuscar" type="submit" value="BUSCAR">
