--- a/src/test/resources/templates/selectorTipo.hbs
+++ b/src/test/resources/templates/selectorTipo.hbs
@@ -1,7 +1,10 @@
-<h4>Tipo: <select name = "tipo" form = "consulta" >
+	 <div>
+	  <h4>Tipo: <select name = "tipo" form = "consulta" >
+	  		  <option value="Todos">Todos</option>
   	  		  <option value="Negocio">Negocio</option>
-  	 		  <option value="Colectivo">Estacion de Colectivo</option>
+  	 		  <option value="EstacionDeColectivo">Estacion de Colectivo</option>
   	 		  <option value="Banco">Banco</option>
-  			  <option value="CGP">CGP</option>
+  			  <option value="Cgp">CGP</option>
   	 		  </select>
-</h4>
+	  </h4>
+	 </div>
