--- a/src/test/resources/templates/busqueda-pois.html
+++ b/src/test/resources/templates/busqueda-pois.html
@@ -1,55 +1,54 @@
+{{>navBar.hbs}}
+
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
   <link rel="stylesheet" type="text/css" href="listado-consultas.css" media="screen" />
-    <title>POIS</title>
-  </head>
-  <body>
-  		<h1>Resultado busqueda</h1>
-		
-		<h2>Id busqueda:</h2>
-		<h2>Fecha:</h2>
-		<h3>Pois encontrados</h3>
-		
-  		<div class="wrapper">
-  	  	  <div class="table">
-  	   	    <div class="row header">
-     	 	   <div class="cell">ID</div>
-     		   <div class="cell"> Fecha</div>
-     	 	   <div class="cell">Pois&nbspEncontrados </div>
-     	 	   <div class="cell">Terminal </div>
-            </div>
+  <title>POIS</title>
+</head>
 
-  	      
-		  	<div class="row">
-              <div class="cell"> 0001 </div>
-    	      <div class="cell"> 25/03/2016 </div>
-       		  <div class="cell"> 14 </div>
-      		  <div class="cell"> 1 </div>
- 	 	 	</div>
-		 
-		    <div class="row">
-              <div class="cell"> 0002 </div>
-    	      <div class="cell"> 08/07/2016 </div>
-       		  <div class="cell"> 25 </div>
-      		  <div class="cell"> 2 </div>
- 	 	     </div>
-		 
-		 
-		 
-		   <div class="row">
-              <div class="cell"> 0003 </div>
-    	      <div class="cell"> 10/11/2016 </div>
-       		  <div class="cell"> 26 </div>
-      		  <div class="cell"> 3 </div>
- 	 	    </div>
-		 
-		 
-		 </div>
-	</div>
+   <div>    </div>
+   <div>    </div>
+  <h1> VER POIS</h1>  
+  <body style="text-align:center">
+  
+  
+    <div>
+  	<h5> A continuacion se muestran los Pois de la busqueda </h5>
+    <br>
+    	<br>
+	<br>
+	
+	<div style="width:800px; margin:0 auto;">
+  		 <h2>RESULTADOS</h2>
+  		 
+  		 <br>
+  		 <br>
+  		 
+  		 <table class="table table-stripped" align="center">
+			   <tr class="row header">
+			   	   <th>Id</th>
+				   <th>Nombre</th>
+				   <th>Ubicacion</th>
+				   <th>Calle</th>
+				   <th>Direccion</th>
+				   <th>Comuna</th>
+			   </tr>
 		
+	<!--  	   {{#each pois}}
+			   <tr class="row">
+				   <td>{{id}}</td>
+				   <td>{{nombre}}</td>
+				   <td>{{ubicacion}}</td>
+				   <td>{{calle}}</td>
+				   <td>{{direccion}}</td>
+				   <td>{{comuna}}</td>
+				   <td>
+			   </tr>
+		      {{/each}} -->
+		</table>
+    </div> 
+
   
-  
-  
-  </body>
+ </body>
 </html>
