--- a/src/test/resources/templates/tables.css
+++ b/src/test/resources/templates/tables.css
@@ -18,6 +18,9 @@ body
   width: 100%;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   display: table;
+  border-collapse: separate;
+  border-spacing: 10px 50px;
+}
 }
 
 .tr{
