--- a/src/test/resources/templates/modificarPoi.hbs
+++ b/src/test/resources/templates/modificarPoi.hbs
@@ -1,19 +1,11 @@
-{{>navBar.hbs}}
+{{#partial "titulo"}}
+Administrar POIs
+{{/partial}}
 
-<!DOCTYPE html>
-<html>
-<head>
-  <link rel="stylesheet" type="text/css" href="listado-consultas.css" media="screen" />
-  <title>Editar Poi</title>
-</head>
-
-
-   <div>    </div>
-   <div>    </div>
+{{#partial "principal"}}
   <h1>Editar Poi</h1>  
-  <body>
     <div>
-    	<form action="/modificarTerminal" method="POST"> 
+    	<form action="/administrarPoi" method="POST"> 
     	Nombre anterior: {{nombre}}
     	<br>
         <input class="filterComuna" type="text" name="nuevoNombre" id="textNombre" placeholder="nombre" size="25" max="10">
@@ -35,11 +27,6 @@
         <button class="botonBuscar" value="Atras"/>Atras</button>
         <button class="botonWarning" value="Confirmar"/>Confirmar</button>
     </div>
-  <footer class="footer">
-     <p class="text-center">
-       &copy; 2016 UTN FRBA
-     </p>
- </footer>
-  
- </body>
-</html>
+{{/partial}}
+{{>layout.hbs}}
+
