Agrego busqueda por tags, y agrupo parametros en una clase

--- a/src/test/resources/templates/perfil-terminal.hbs
+++ b/src/test/resources/templates/perfil-terminal.hbs
@@ -17,6 +17,7 @@
 	    <div>
 	   <input class="passwd" type="text" name="nombre" placeholder="nombre" size="25" max="10">
 	   <input class="passwd" type="text" name="calle" placeholder="calle" size="25" max="10">
+	   <input class="passwd" type="text" name="tags" placeholder="tags" size="25" max="10">
 	   <input type="hidden" name="terminal" value={{terminal.numeroTerminal}}>	
    	 </div>   
 	</form>	
