--- a/src/test/resources/templates/modificarPoi.hbs
+++ b/src/test/resources/templates/modificarPoi.hbs
@@ -5,7 +5,7 @@ Administrar POIs
 {{#partial "principal"}}
   <h1>Editar Poi</h1>  
     <div>
-    	<form action="/administrarPoi" method="POST"> 
+    	<form action="/administrarPoi?nombre=all" method="POST"> 
     	Nombre anterior: {{nombre}}
     	<br>
         <input class="filterComuna" type="text" name="nuevoNombre" id="textNombre" placeholder="nombre" size="25" max="10">
