pruebo arreglo, hago alta poi

--- a/src/test/resources/templates/terminal.hbs
+++ b/src/test/resources/templates/terminal.hbs
@@ -16,6 +16,7 @@
   
     <div>
     	<form action="/terminal" method="GET">	
+    	Comuna:
     		<input class="passwd" type="text" id="comuna" value=0 name="comuna" placeholder="comuna" size="25" max="10">
 	  		<input class="botonIngresar" type="submit" value="BUSCAR">
 	  	</form>
