--- a/src/test/resources/templates/administrarPoi.hbs
+++ b/src/test/resources/templates/administrarPoi.hbs
@@ -44,6 +44,13 @@ Administrar POIs
 		      {{/each}}
         </table>
     </div>
+    
+    <form action="/altaPoi" method="GET">	
+	  	<input class="botonIngresar" type="submit" value="ALTA POI">
+    </form>
+    
+    <br>
+    <br>
 {{/partial}}
 {{>layout.hbs}}
 
