--- a/src/test/resources/templates/navBar.hbs
+++ b/src/test/resources/templates/navBar.hbs
@@ -2,11 +2,12 @@
 	<nav class="navbar navbar-default">
       <div class="container">
       	<div class="navbar-header">
-         <a class="navbar-brand" href="/">Home</a>
+         <a class="navbar-brand" href="/perfil">Home</a>
         </div>
 	  
         <div>
          <ul class="nav navbar-nav">
+         <li><a href="/perfil">Buscar Pois</a></li>
           <li><a href="/administrarPoi?nombre=all">Administrar Pois</a></li>
           <li><a href="/terminal?comuna=0">Administrar Terminales</a></li>
           <li><a href="/historico-consultas">Historial Consultas</a></li>
