--- a/src/test/resources/templates/administrarPoi.hbs
+++ b/src/test/resources/templates/administrarPoi.hbs
@@ -4,10 +4,22 @@ Administrar POIs
 
 {{#partial "principal"}}
  <h1>Administrar POIs</h1> 
-	  {{>selectorTipo.hbs}}
+	  
+
     
     	<form action="/administrarPoi" method="GET">	
-	 		<input class="passwd" type="text" id="nombre" value="all" name="nombre" placeholder="nombre" size="25" max="10">
+    		  <div>
+	  			<h4>Tipo:
+	  		  <select name = "tipo" form = "consulta" >
+	  		  <option value="Todos">Todos</option>
+  	  		  <option value="Negocio">Negocio</option>
+  	 		  <option value="EstacionDeColectivo">Estacion de Colectivo</option>
+  	 		  <option value="Banco">Banco</option>
+  			  <option value="Cgp">CGP</option>
+  	 		  </select>
+	  			</h4>
+	 			</div>
+	 		<input class="passwd" type="text" value="all" name="nombre" placeholder="nombre" size="25" max="10">
         	<input class="botonIngresar" type="submit" value="Buscar">
         </form>
         
