fix query params adm poi

--- a/src/test/resources/templates/administrarPoi.hbs
+++ b/src/test/resources/templates/administrarPoi.hbs
@@ -10,7 +10,7 @@ Administrar POIs
     	<form action="/administrarPoi" method="GET">	
     		  <div>
 	  			<h4>Tipo:
-	  		  <select name = "tipo" form = "consulta" >
+	  		  <select name = "tipo">
 	  		  <option value="Todos">Todos</option>
   	  		  <option value="Negocio">Negocio</option>
   	 		  <option value="EstacionDeColectivo">Estacion de Colectivo</option>
