--- a/src/test/resources/templates/navBar.hbs
+++ b/src/test/resources/templates/navBar.hbs
@@ -7,7 +7,7 @@
 	  
         <div>
          <ul class="nav navbar-nav">
-          <li><a href="/administrarPoi?nombre=all">Administrar Pois</a></li>
+          <li><a href="/administrarPoi?tipo=Todos&nombre=all">Administrar Pois</a></li>
           <li><a href="/terminal?comuna=0">Administrar Terminales</a></li>
           <li><a href="/historico-consultas">Historial Consultas</a></li>
          </ul>
