corrijo muchos bugs

--- a/src/test/resources/templates/historico-consultas.hbs
+++ b/src/test/resources/templates/historico-consultas.hbs
@@ -48,7 +48,7 @@
        		  <td><center> {{palabrasBuscadas}} </center></td>
        		  <td>
 				  <form action="/busqueda-pois" method="GET">
-				   			<input type="hidden" name=busqueda value={{pois}} >
+				   			<input type="hidden" name=busqueda value={{id}} >
 				   			<input type="submit" value="Ver Pois">
 				  </form>
 			  </td>
